# rigid-body

./: CMakeLists.txt  Face.cpp  Face.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  README.md  RigidMesh.cpp  RigidMesh.h  RigidObject.cpp  RigidObject.h  Shader.cpp  Shader.h  Solver.cpp  Solver.h  StateVector.cpp  StateVector.h  Vertex.cpp  Vertex.h  box_diffuse.ppm  dhouse_diffuse.tif  main.cpp  parameters  parameters_mac  parameters_test  shader.frag  shader.vert
